Move external link button and fix spacing of labels

--- a/ui/src/app/applications/components/application-tile/application-tile.scss
+++ b/ui/src/app/applications/components/application-tile/application-tile.scss
@@ -14,8 +14,9 @@
         }
     }
 
-    .info-item--row {
-        margin: 2px 0;
+    .info-item--row .info-item {
+        margin-top: 2px;
+        margin-bottom: 2px;
     }
 
     &--compact {
